2018-05-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Fast "powerless" gamma ramps.

	We calculate the lookup tables for the power function using finite
	differences. This is 10 times faster and accurate enough for gamma
	correction.

	* graph/gblender.c (gblender_set_gamma_table): Reimplement using
	finite differences.
	* src/ftstring.c (event_gamma_change): Ditto for the decoration ramp.

2018-05-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (bitmap_scale): Mark centers of mono pixels.

2018-05-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grfill.c (grFillRect): Thinko.

2018-05-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Update FT_DEBUG_AUTOFIT mode.

	* src/ftgrid.c (grid_status_draw_outline) [FT_DEBUG_AUTOFIT]:
	Show active segments only when autohinter is forced. Minor tweaks.

2018-05-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Accept bitmap fonts.

	* src/ftgrid.c (main): Accept bitmap fonts.
	(grid_status_draw_outline): Do bitmap for any font.
	(grid_status_rescale_initial): Bitmap-compatible improved layout.

2018-05-08  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (main): Fail to open font earlier.

2018-05-01  Werner Lemberg  <wl@gnu.org>

	* Version 2.9.1 released.
	=========================


	Tag sources with `VER-2-9-1.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect/ftinspect.pro: Updated.

2018-04-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (main): Update initializations.

2018-04-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (main): Use size metrics instead of resolution.
	* src/ftview.c (Render_Fancy, Render_Stroke): Ditto.

2018-04-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (gitd_status_init): Set default resolution here...
	(parse_cmdline): ... instead of here.

2018-04-23  Alexei Podtelezhnikov  <apodtele@gmail.com>
